--- a/views/regWallet.ejs
+++ b/views/regWallet.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>지갑 관계도</title>
-    </head>
-    <body>
-        <h1>NFT 구매</h1>
-        <br>
-        <div> 
-            <a href="/">메인 창으로</a>
-        </div>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>HAC</title>
+</head>
+
+<body>
+    <h1>Buy NFT</h1>
+    <br>
+    <div>
+        <a href="/licenseSystem">Main</a>
+    </div>
+</body>
+
 </html>
