--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,13 @@
         async function resMsg(id) {
             //
             switch (id) {
-                case 1: return "지갑 연결 성공.";
-                case 10001: return "다른 부모 노드와 연결되어 있습니다.";
-                case 10002: return "자식 노드를 부모 노드로 등록할 수 없습니다.";
-                case 10003: return "이미 등록된 자식 노드입니다.";
-                case 10004: return "부모 노드 생성 실패";
-                case 10005: return "자식 노드 생성 실패";
-                default: return "알 수 없는 오류 메세지"
+                case 1: return "Wallet connection successful.";
+                case 10001: return "It is connected to another parent node.";
+                case 10002: return "Cannot register child node as parent node.";
+                case 10003: return "It is a child node that is already registered..";
+                case 10004: return "Failed to create parent node";
+                case 10005: return "Failed to create child node";
+                default: return "unknown error message"
             }
             //
             return false;
@@ -126,7 +126,7 @@
             alert(msg);
         }
 
-        async function nextWallet(client, nfts) {
+        async function parentWallet(client, nfts) {
             for (var i = 0; i < nfts.result.account_nfts.length; i++) {
                 if (nfts.result.account_nfts[i].Flags === 0) {
                     var uri = xrpl.convertHexToString(nfts.result.account_nfts[i].URI);
@@ -145,18 +145,19 @@
             return undefined;
         }
 
-        async function checkLevel(acount) {
+        async function checkLevel(account) {
+            if (rootWallet.value === account) return 1;
+            //
             const client = new xrpl.Client("wss://xls20-sandbox.rippletest.net:51233");
             await client.connect();
             //
             var nfts = await client.request({
                 method: "account_nfts",
-                account: acount,
+                account: account,
             });
             //
-            var isChild = false;
             var level = 1;
-            //                
+            //
             for (var i = 0; i < nfts.result.account_nfts.length; i++) {
                 if (nfts.result.account_nfts[i].Flags == 0) {
                     // 노드값
@@ -175,28 +176,57 @@
                             account: acc,
                         });
                         //
-                        while (nfts.result.account_nfts.length > 0) {
-                            nfts = await nextWallet(client, nfts); if (!nfts) break;
-                            level++;
+                        var bVerify = await verifyWallet(account, nfts);
+                        //
+                        if (bVerify) {
+                            while (nfts.result.account_nfts.length > 0) {
+                                account = nfts.result.account;
+                                nfts = await parentWallet(client, nfts); if (!nfts) break;
+                                // 부모 지갑 검색
+                                bVerify = await verifyWallet(account, nfts); if (!bVerify) break;
+                                // 유효성 체크
+                                level++;
+                            }
                         }
                         //
                         await client.disconnect();
                         //
-                        return level;
+                        if (!bVerify) return -1;
+                        //
+                        return account === rootWallet.value ? level : 0;
                     }
-                    else if (uri.indexOf("CHILD:") >= 0) isChild = true;
                 }
             }
             //
             await client.disconnect();
             //
-            return isChild ? 1 : 0;
+            return 0;
+        }
+
+        async function verifyWallet(account, nfts) {
+            var bVerify = false;
+            //
+            for (var i = 0; i < nfts.result.account_nfts.length; i++) {
+                // 유효성 체크 부모하고 연결된 노드인지 조회
+                if (nfts.result.account_nfts[i].Flags == 0) {
+                    // 노드값
+                    var uri;
+                    //
+                    uri = await xrpl.convertHexToString(nfts.result.account_nfts[i].URI);
+                    //
+                    if (uri.indexOf("CHILD:") >= 0) {
+                        if (bVerify = account === uri.substring(6)) break;
+                    }
+                }
+            }
+            //
+            return bVerify;
         }
 
         async function login() {
             const client = new xrpl.Client("wss://xls20-sandbox.rippletest.net:51233");
             await client.connect();
-            //
+            //            
             var nfts = await client.request({
                 method: "account_nfts",
                 account: userWallet.value,
@@ -210,39 +240,45 @@
                 level = await checkLevel(nfts.result.account_nfts[i].Issuer); if (level > 0) break;
             }
             //
+            var msg;
+            //
             if (level > 0) {
-                alert("Level-" + level);
+                msg = "Your service level is " + level;
+            } else if (level == 0) {
+                msg = "I am not a service user. Buy Licensed NFT.";
+            } else {
+                msg = "You are logged in with an unverified account.";
             }
-            else {
-                alert("Not a member!!!");
-            }
+            //            
+            await alert(msg);
         }
     </script>
     <memta charset="UTF-8">
-        <title>지갑-연결</title>
+        <title>LicenseSystem</title>
         <link rel="stylesheet" href="css/sytle.css" / type="text/css">
 </head>
 
 <body>
     <form method="post" action="/licenseSystem/process/lsview">
+        <div className="root">
+            <input type="text" id="rootWallet" size="40" value=<%=root%> name="rootWallet" placeholder="root wallet" />
+            <button type="submit">Lookup [root-wallet]</button>
+        </div>
+        <br><br>
         <div className="parent">
-            <text className="label">부모주소</text>
-            <input type="text" id="parWallet" size="40" placeholder="wallet" />
-            <input type="text" id="parSecret" size="30" placeholder="secret" />
+            <input type="text" id="parWallet" size="40" placeholder="parent wallet" />
+            <input type="text" id="parSecret" size="40" placeholder="secret" />
         </div>
         <div className="child">
-            <text className="label">자식주소</text>
-            <input type="text" id="chdWallet" size="40" placeholder="wallet" />
-            <input type="text" id="chdSecret" size="30" placeholder="secret" />
-            <button type="button" onClick="regWallet()">연결</button>
-            <button type="submit">조회</button>
+            <input type="text" id="chdWallet" size="40" placeholder="child wallet" />
+            <input type="text" id="chdSecret" size="40" placeholder="secret" />
+            <button type="button" onClick="regWallet()">Link</button>
         </div>
     </form>
-    <br><br><br>
+    <br><br>
     <div className="child">
-        <text className="label">회원주소</text>
-        <input type="text" id="userWallet" size="40" placeholder="wallet" />
-        <button type="button" onClick="login()">체크레벨</button>
+        <input type="text" id="userWallet" size="40" placeholder="Member wallet" />
+        <button type="button" onClick="login()">check level</button>
     </div>
 </body>
 
